Casi es el final

--- a/Conjuntos/Conjuntos.tex
+++ b/Conjuntos/Conjuntos.tex
@@ -550,7 +550,7 @@
             \end{equation}
 
             Esta operación basicamente nos da un conjunto en el que estan \textbf{solo} los elementos
-            que bien pertenezcan a A y bien que pertenezcan a B.
+            que bien pertenezcan a A y también que pertenezcan a B.
 
 
         % =================================
@@ -938,6 +938,10 @@
             |A| = \#A = Card(A)
         \end{equation}
 
+        PD: Como te imaginas las propiedades no sirven de nada si es que alguno de tus conjuntos
+        tiene una cardinalidad infinita, así que voy a suponer por obviedad que todos los siguientes
+        conjuntos son finitos, que sino tendría que especificarlo a cada 4 palabras.
+
 
 
         % =====================================
@@ -1026,7 +1030,6 @@
                 \begin{equation*}
                     |P(A)| = 2^n
                 \end{equation*}
-
 
 
 \end{document}
